WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48096
[Chromium] Fix Chromium Mac build
https://bugs.webkit.org/show_bug.cgi?id=48096
Summary
[Chromium] Fix Chromium Mac build
Mihai Parparita
Reported
2010-10-21 15:25:17 PDT
[Chromium] Fix Chromium Mac build
Attachments
Patch
(1.50 KB, patch)
2010-10-21 15:26 PDT
,
Mihai Parparita
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihai Parparita
Comment 1
2010-10-21 15:26:37 PDT
Created
attachment 71501
[details]
Patch
Mihai Parparita
Comment 2
2010-10-21 15:37:46 PDT
Committed
r70272
: <
http://trac.webkit.org/changeset/70272
>
WebKit Review Bot
Comment 3
2010-10-21 16:21:11 PDT
http://trac.webkit.org/changeset/70272
might have broken GTK Linux 64-bit Debug The following tests are not passing: mathml/presentation/fenced-mi.xhtml mathml/presentation/fenced.xhtml mathml/presentation/fractions-vertical-alignment.xhtml mathml/presentation/over.xhtml mathml/presentation/roots.xhtml mathml/presentation/row-alignment.xhtml mathml/presentation/subsup.xhtml
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug