2010-10-21  Mihai Parparita  <mihaip@chromium.org>

Reviewed by James Robinson.

        [Chromium] Fix Chromium Mac build
        https://bugs.webkit.org/show_bug.cgi?id=48096

        Fix Chromium Mac build after r70225 (Chromium uses Core Text but is not
        PLATFORM(MAC)).

        * platform/graphics/SimpleFontData.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@70272 bbb929c8-8fbe-4397-9dbb-9b2b20218538