third_party/WebKit/WebCore/platform/graphics/SimpleFontData.h
@@ -38,7 +38,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 typedef struct OpaqueATSUStyle* ATSUStyle;
 #endif
 
-#if PLATFORM(MAC)
+#if PLATFORM(MAC) || USE(CORE_TEXT)
 #include <wtf/RetainPtr.h>
 #endif
 
@@ -131,7 +131,7 @@ public:
     NSFont* getNSFont() const { return m_platformData.nsFont(); }
 #endif
 
-#if PLATFORM(MAC)
+#if PLATFORM(MAC) || USE(CORE_TEXT)
     CFDictionaryRef getCFStringAttributes(TypesettingFeatures) const;
 #endif
 
@@ -235,7 +235,7 @@ public:
 private:
 #endif
 
-#if PLATFORM(MAC)
+#if PLATFORM(MAC) || USE(CORE_TEXT)
     mutable HashMap<unsigned, RetainPtr<CFDictionaryRef> > m_CFStringAttributes;
 #endif
 
